plugins {
  id 'java'
  id 'war'
}

group 'server'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.9.2'
  springVersion = '5.3.37'
  lombokVersion = '1.18.30'
  springSecurityVersion='5.8.13'

}

sourceCompatibility = '1.17'
targetCompatibility = '1.17'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

dependencies {
  // 스프링
  implementation ("org.springframework:spring-context:${springVersion}")
          { exclude group: 'commons-logging', module: 'commons-logging' }
  implementation "org.springframework:spring-webmvc:${springVersion}"
  implementation 'javax.inject:javax.inject:1'

  // AOP
  implementation 'org.aspectj:aspectjrt:1.9.20'
  implementation 'org.aspectj:aspectjweaver:1.9.20'

  // JSP, SERVLET, JSTL
  implementation('javax.servlet:javax.servlet-api:4.0.1')
  compileOnly 'javax.servlet.jsp:jsp-api:2.1'
  implementation 'javax.servlet:jstl:1.2'

  // Logging
  implementation 'org.slf4j:slf4j-api:2.0.9'
  runtimeOnly 'org.slf4j:jcl-over-slf4j:2.0.9'
  runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.9'
  implementation 'log4j:log4j:1.2.17'

  // xml내 한글 처리
  implementation 'xerces:xercesImpl:2.12.2'

  // Lombok
  compileOnly "org.projectlombok:lombok:${lombokVersion}"
  annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

  // Jackson - Json 처리
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'

  // 데이터베이스
  implementation 'com.mysql:mysql-connector-j:8.1.0'
  implementation 'com.zaxxer:HikariCP:2.7.4'

  implementation "org.springframework:spring-tx:${springVersion}"
  implementation "org.springframework:spring-jdbc:${springVersion}"

  implementation 'org.mybatis:mybatis:3.4.6'
  implementation 'org.mybatis:mybatis-spring:1.3.2'


  implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
  implementation 'org.apache.logging.log4j:log4j-api:2.0.1'
  implementation 'org.apache.logging.log4j:log4j-core:2.0.1'

  // 보안
  implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
  implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
  implementation("org.springframework.security:spring-security-core:${springSecurityVersion}")
  implementation("org.springframework.security:spring-security-taglibs:${springSecurityVersion}")


  implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
  implementation 'javax.validation:validation-api:2.0.1.Final'
  implementation 'org.glassfish:javax.el:3.0.0' // EL API

  // jjwt
  implementation("io.jsonwebtoken:jjwt-api:0.11.5")
  runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
  implementation("io.jsonwebtoken:jjwt-jackson:0.11.5")

  // Spring Data Redis
  implementation 'org.springframework.data:spring-data-redis:2.7.2' // 최신 버전의 Spring Data Redis
  implementation 'io.lettuce:lettuce-core:6.4.0.RELEASE' // 최신 버전의 Lettuce


  // 테스트
  testImplementation "org.springframework:spring-test:${springVersion}"
  testCompileOnly"org.projectlombok:lombok:${lombokVersion}"
  testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

  //coolsms
  implementation 'net.nurigo:sdk:4.2.7'

  //swagger
  implementation 'io.springfox:springfox-swagger2:2.9.2'
  implementation 'io.springfox:springfox-swagger-ui:2.9.2'

//  implementation 'org.springframework.security:spring-security-oauth2-client:6.3.3'

  // gcp storage
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'

  // jackson-datatype-jsr310
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'

  // websocket
  implementation 'org.springframework:spring-websocket:5.3.20'
  compileOnly 'javax.websocket:javax.websocket-api:1.1'
  // Spring Messaging (STOMP 사용을 위한 의존성)
  implementation 'org.springframework:spring-messaging:5.3.20'

  // SockJS를 사용하기 위한 의존성
  implementation 'org.webjars:sockjs-client:1.5.1'

  // STOMP 클라이언트를 위한 의존성
  implementation 'org.webjars:stomp-websocket:2.3.4'

  // (Optional) WebSocket 서버 테스트를 위한 의존성
  testImplementation 'org.springframework:spring-test:5.3.20'

  implementation("org.redisson:redisson:3.16.3")

}


test {
  useJUnitPlatform()
}

